--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <div id="header_boton">botones</div>
     </header>
     <main>main</main>
-    <footer>fo3ter</footer>
+    <footer>footer</footer>
 </body>
 </html>
