--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div id="header_logo"></div>
-        <div id="header_menu">MEUNU</div>
+        <div id="header_menu">MENU</div>
         <div id="header_busqueda">busqueda</div>
         <div id="header_boton">botones</div>
     </header>
