--- a/index.html
+++ b/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./index.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material">
+
+    <div class="header-container">
+        <img src="img/logo.jpg" alt="Mi Logo">
+        <h1>Mangas</h1>
+        <form class="search-form" action="/" method="get">
+            <input type="text" name="search" placeholder="Buscar productos...">
+            <button type="submit">Buscar</button>
+            <div class="social-icons">
+            </div>
+        </form>
+    </div>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="img">
+    <link rel="stylesheet" href="estilos.css">
+
+
+
 </head>
+
 <body>
     <header>
-        <div id="header_logo">
-            <img src="img/logo.svg" alt="">
-        </div>
-        <div>
-            <span id class="material-symbols-outlined md-36">
-                menu
-
-            </span>
-        </div>
-
-        <div id="header_logo"></div>
-        <div id="header_menu">MENU</div>
-        <div id="header_busqueda">busqueda</div>
-        <div id="header_boton">botones</div>
+        <h1></h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>main</main>
-    <footer>footer</footer>
-</body>
-</html>
+
+    <main>
+        <section class="producto">
+            <img src="img/producto1.jpg" alt="preducto 1" width="200" height="200">
+            <h2>Solo leveling</h2>
+            <p class="descripcion"> Manhwa de accion</p>
+            <button class="btn-agregar">ver mas</button>
+        </section>
+
+        <section class="producto">
+            <img src="producto2.jpg" alt="Producto 2">
+            <h2>Producto 2</h2>
+            <p class="descripcion">mmmmmmmm</p>
+            <button class="btn-agregar">ver mas</button>
+        </section>
+
+        <section class="producto">
+            <img src="producto3.jpg" alt="Producto 3">
+            <h2>Producto 3</h2>
+            <p class="descripcion">mmmmmmmmm</p>
+            <button class="btn-agregar">ver mas</button>
+        </section>
+
+        <section class="producto">
+            <img src="producto4.jpg" alt="Producto 4">
+            <h2>Producto 4</h2>
+            <p class="descripcion">mmmmmmm</p>
+            <button class="btn-agregar">ver mas</button>
+        </section>
+
+        <section class="producto">
+            <img src="producto5.jpg" alt="Producto 5">
+            <h2>Producto 5</h2>
+            <p class="descripcion">mmmmm</p>
+            <button class="btn-agregar">ver mas</button>
+        </section>
+
+        <section class="producto producto-right">
+            <img src="producto6.jpg" alt="Producto 6">
+            <h2>Producto 6</h2>
+            <p class="descripcion">mmmmmmmmm</p>
+
+            <button class="btn-agregar">ver mas</button>
+        </section>
+        <footer>
+            <p>© 2023 - Mi Empresa - Todos los derechos reservados.</p>
+            <p>Contacto: correo@miempresa.com</p>
+        </footer>
