--- a/index.html
+++ b/index.html
@@ -35,48 +35,48 @@
 
     <main>
         <section class="producto">
-            <img src="img/producto1.jpg" alt="preducto 1" width="200" height="200">
+            <img src="img/producto1.jpg" alt="preducto 1" width="190" height="200">
             <h2>Solo leveling</h2>
             <p class="descripcion"> Manhwa de accion</p>
-            <button class="btn-agregar">ver mas</button>
+            <button href="./Paginas/categoria.html" class="btn btn-primary">ver mas</button>
         </section>
 
         <section class="producto">
-            <img src="producto2.jpg" alt="Producto 2">
-            <h2>Producto 2</h2>
+            <img src="img/producto2.jpg" alt="Producto 2" width="190" height="200">
+            <h2>one piece</h2>
             <p class="descripcion">mmmmmmmm</p>
             <button class="btn-agregar">ver mas</button>
         </section>
 
         <section class="producto">
-            <img src="producto3.jpg" alt="Producto 3">
-            <h2>Producto 3</h2>
+            <img src="img/producto3.jpg" alt="Producto 3" width="190" height="200">
+            <h2>naruto</h2>
             <p class="descripcion">mmmmmmmmm</p>
             <button class="btn-agregar">ver mas</button>
         </section>
 
         <section class="producto">
-            <img src="producto4.jpg" alt="Producto 4">
-            <h2>Producto 4</h2>
+            <img src="producto4.jpg" alt="Producto 4" width="190" height="200">>
+            <h2>Bleach</h2>
             <p class="descripcion">mmmmmmm</p>
             <button class="btn-agregar">ver mas</button>
         </section>
 
         <section class="producto">
-            <img src="producto5.jpg" alt="Producto 5">
-            <h2>Producto 5</h2>
+            <img src="producto5.jpg" alt="Producto 5" width="190" height="200">>
+            <h2>Boku no hero</h2>
             <p class="descripcion">mmmmm</p>
             <button class="btn-agregar">ver mas</button>
         </section>
 
         <section class="producto producto-right">
-            <img src="producto6.jpg" alt="Producto 6">
-            <h2>Producto 6</h2>
+            <img src="producto6.jpg" alt="Producto 6" width="200" height="200">
+            <h2>Death note</h2>
             <p class="descripcion">mmmmmmmmm</p>
 
             <button class="btn-agregar">ver mas</button>
         </section>
         <footer>
-            <p>© 2023 - Mi Empresa - Todos los derechos reservados.</p>
-            <p>Contacto: correo@miempresa.com</p>
+            <p>pagina de mangas gratis </p>
+            <p>Contacto: hola@gmail.com</p>
         </footer>
